--- a/mobile/aboutus.html
+++ b/mobile/aboutus.html
@@ -133,7 +133,7 @@
 
         <!-- 分享 -->
         <div class="share">
-            <h2>分享给好友</h2>
+            <span>分享给好友</span>
             <ul class="share-list">
                 <li>
                     <a class="share-icon"
@@ -165,31 +165,38 @@
             </ul>
         </div>
 
+
         <div class="footer_navbar">
             <ul>
                 <li class="footer_navbar_li">
-                    <a href="mailto:onlinesales@dji.com">
-                        <img src="./image/footer.png"/>
+                    <a  class="right" href="#">
+                        <img src="./image/meitijieshao.png"/>
                         <span class="text">媒体介绍</span>
                     </a>
                 </li>
                 <li class="footer_navbar_li">
-                    <a href="mailto:onlinesales@dji.com">
-                        <img src="./image/footer.png"/>
+                    <img src="./image/lianluowomen.png"/>
+                    <a class="left" href="#">
                         <span class="text">联络我们</span>
                     </a>
                 </li>
                 <li class="footer_navbar_li">
-                    <a href="mailto:onlinesales@dji.com">
-                        <img src="./image/footer.png"/>
+                    <a  class="right" href="mailto:service@winnovator.com">
+                        <img src="./image/zaixiankefu.png"/>
                         <span class="text">在线客服</span>
                     </a>
                 </li>
                 <li class="footer_navbar_li">
-                    <a href="mailto:onlinesales@dji.com">
-                        <img src="./image/footer.png"/>
+                    <img src="./image/hezuohuoban.png"/>
+                    <div class="right" style="position: relative;">
                         <span class="text">合作伙伴</span>
-                    </a>
+                        <select>
+                            <option value="">剑桥大学幸福研究院</option>
+                            <option value="">联动天翼科技有限公司</option>
+                            <option value="">全球华人积极心里学会</option>
+                            <option value="">哈弗大学医学院教练中心</option>
+                        </select>
+                    </div>
                 </li>
 
                 <!--  条款 -->
