--- a/mobile/index.html
+++ b/mobile/index.html
@@ -83,7 +83,7 @@
 
         <!-- 分享 -->
         <div class="share">
-            <h2>分享给好友</h2>
+            <span>分享给好友</span>
             <ul class="share-list">
                 <li>
                     <a class="share-icon"
@@ -119,26 +119,26 @@
         <div class="footer_navbar">
             <ul>
                 <li class="footer_navbar_li">
-                    <a href="mailto:onlinesales@dji.com">
+                    <a  class="right" href="#">
                         <img src="./image/meitijieshao.png"/>
                         <span class="text">媒体介绍</span>
                     </a>
                 </li>
                 <li class="footer_navbar_li">
-                    <a href="mailto:onlinesales@dji.com">
-                        <img src="./image/lianluowomen.png"/>
+                    <img src="./image/lianluowomen.png"/>
+                    <a class="left" href="#">
                         <span class="text">联络我们</span>
                     </a>
                 </li>
                 <li class="footer_navbar_li">
-                    <a href="mailto:onlinesales@dji.com">
+                    <a  class="right" href="mailto:service@winnovator.com">
                         <img src="./image/zaixiankefu.png"/>
                         <span class="text">在线客服</span>
                     </a>
                 </li>
                 <li class="footer_navbar_li">
                     <img src="./image/hezuohuoban.png"/>
-                    <div style="position: relative;">
+                    <div class="right" style="position: relative;">
                         <span class="text">合作伙伴</span>
                         <select>
                             <option value="">剑桥大学幸福研究院</option>
