--- a/mobile/index.html
+++ b/mobile/index.html
@@ -67,7 +67,7 @@
         <a href="./used.html">
             <img class="info_img" src="./image/second.png"/>
         </a>
-        <a href="#">
+        <a href="./airobot.html">
             <img class="info_img" src="./image/third.png"/>
         </a>
         <a href="#">
