--- a/mobile/index.html
+++ b/mobile/index.html
@@ -14,9 +14,9 @@
 
     <!-- 导航 -->
     <div class="my_nav">
-        <!--<a class="weixin" href="javascript:history.go(-1);">-->
-            <!--<img src="./image/goback.png"/>-->
-        <!--</a>-->
+        <a class="weixin" href="javascript:history.go(-1);">
+            <img src="./image/goback.png"/>
+        </a>
 
         <h1 class="logo">
             <a href="./index.html">
@@ -70,7 +70,7 @@
         <a href="./airobot.html">
             <img class="info_img" src="./image/third.png"/>
         </a>
-        <a href="#">
+        <a href="./zhuanjia.html">
             <img class="info_img" src="./image/four.png"/>
         </a>
         <a href="./ourteam.html">
