--- a/mobile/login.html
+++ b/mobile/login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html itemscope="itemscope" itemtype="http://schema.org/Product" lang="en">
 <head>
-    <title>首页 - 幸福创客</title>
+    <title>登录 - 幸福创客</title>
     <meta content="结合知识与科技,为人类打造更幸福、更健康的生活。"
           name="description"/>
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type"/>
