--- a/mobile/airobot.html
+++ b/mobile/airobot.html
@@ -76,6 +76,7 @@
         <p>&nbsp; &nbsp; &nbsp; 它，会为你选择最适合你聊天伙伴，彻底打开自己的心结并找到解决之道；</p>
 
         <p>&nbsp; &nbsp; &nbsp; 它，能帮你搜罗到最适合你的顶级心理学家，建立一对一的联系；</p>
+        <p>&nbsp; &nbsp; &nbsp; 它，在浩瀚的心理学知识里, 会介绍和推送你最需要的心理学富媒体专业资讯。</p>
     </div>
 
 
