--- a/mobile/zhuanjia.html
+++ b/mobile/zhuanjia.html
@@ -7,8 +7,10 @@
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type"/>
     <meta content="width=device-width,minimum-scale=1.0,maximum-scale=1.0" name="viewport"/>
     <link rel="stylesheet" href="./css/my_style.css">
+    <link rel="stylesheet" href="./css/video-js.css">
 
     <script type="text/javascript" src="./js/jquery-1.10.2.min.js"></script>
+    <script type="text/javascript" src="./js/video.js"></script>
 </head>
 <body>
 
@@ -32,12 +34,105 @@
 
 <div class="my_page">
 
+    <video id="example_video_1" class="video-js vjs-default-skin vjs-big-play-centered" controls preload="none" width="100%"
+           poster="./image/video_dace.png"
+           data-setup="{}">
+        <source src="./video/CEO.mp4" type='video/mp4' />
+        <!--<source src="http://video-js.zencoder.com/oceans-clip.webm" type='video/webm' />-->
+        <!--<source src="http://video-js.zencoder.com/oceans-clip.ogv" type='video/ogg' />-->
+        <track kind="captions" src="demo.captions.vtt" srclang="en" label="English"></track><!-- Tracks need an ending tag thanks to IE9 -->
+        <track kind="subtitles" src="demo.captions.vtt" srclang="en" label="English"></track><!-- Tracks need an ending tag thanks to IE9 -->
+        <p class="vjs-no-js">To view this video please enable JavaScript, and consider upgrading to a web browser that <a href="http://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a></p>
+    </video>
 
+
+    <div class="expert">
+        <ul>
+            <li>
+                <img src="image/martin.png"/>
+                <div class="expert_info expert_info_more">
+                    <div>马丁·塞利格曼</div>
+                    <div>(Martin Seligman)</div>
+                    <div>积极心理学之父并曾任全美心理学协会主席</div>
+                    <div>曾获美国应用与预防心理学会的荣誉奖章，终身成就奖</div>
+                    <div>创始人博士导师及学術研究伙伴</div>
+                </div>
+            </li>
+            <li>
+                <img src="image/tal.png"/>
+                <div class="expert_info">
+                    <div>泰勒·本沙哈尔</div>
+                    <div>(Tal Ben-Shahar)</div>
+                    <div>哈佛大学心理学硕士、组织行为学博士</div>
+                    <div>超级畅销书《幸福的方法》作者</div>
+
+                </div>
+            </li>
+            <li>
+                <img src="image/carol.png"/>
+                <div class="expert_info">
+                    <div>卡洛·考夫曼</div>
+                    <div>(Carol Kauffman)</div>
+                    <div>哈佛大学企业教练中心创始人</div>
+                    <div>企业教练心理学协会副主席</div>
+
+                </div>
+            </li>
+            <li>
+                <img src="image/Felicia.png"/>
+                <div class="expert_info">
+                    <div>弗里西亚·于佩尔</div>
+                    <div>(Felicia Huppert)</div>
+                    <div>剑桥大学幸福研究所所长、终身教授</div>
+                    <div>公司创始人博士导师</div>
+
+                </div>
+            </li>
+            <li>
+                <img src="image/barbara.png"/>
+                <div class="expert_info">
+                    <div>芭芭拉·弗莱迪瑞克森</div>
+                    <div>(Barbara Fredrickson)</div>
+                    <div>北卡罗莱纳大学教堂山分校荣誉教授</div>
+                    <div>提出“建立并丰富积极情绪”理论</div>
+                </div>
+            </li>
+            <li>
+                <img src="image/richard.png"/>
+                <div class="expert_info">
+                    <div>理查德·勒亚德</div>
+                    <div>(Richard Layard)</div>
+                    <div>伦敦经济学院经济表现中心主任</div>
+                    <div>英国最知名经济学家之一，提出“快乐经济学”理论</div>
+
+                </div>
+            </li>
+            <li>
+                <img src="image/peng.png"/>
+                <div class="expert_info">
+                    <div>彭凯平</div>
+                    <div>清华大学心理学系主任</div>
+                    <div>美国加州大学伯克利分校心理学与东亚研究终身教授</div>
+
+
+                </div>
+            </li>
+            <li>
+                <img src="image/john.png"/>
+                <div class="expert_info">
+                    <div>约翰·拉斯特</div>
+                    <div>(John Rust)</div>
+                    <div>剑桥大学心理测验学中心主任</div>
+                    <div>剑桥大学社会及心理学研究院院长</div>
+                </div>
+            </li>
+        </ul>
+    </div>
 
 
     <!-- 分享 -->
     <div class="share">
-        <span>分享给好友</span>
+        <div>分享给好友</div>
         <ul class="share-list">
             <li>
                 <a class="share-icon"
@@ -75,25 +170,25 @@
             <li class="footer_navbar_li">
                 <a  class="right" href="#">
                     <img src="./image/meitijieshao.png"/>
-                    <span class="text">媒体介绍</span>
+                    <div class="text">媒体介绍</div>
                 </a>
             </li>
             <li class="footer_navbar_li">
                 <img src="./image/lianluowomen.png"/>
                 <a class="left" href="#">
-                    <span class="text">联络我们</span>
+                    <div class="text">联络我们</div>
                 </a>
             </li>
             <li class="footer_navbar_li">
                 <a  class="right" href="mailto:service@winnovator.com">
                     <img src="./image/zaixiankefu.png"/>
-                    <span class="text">在线客服</span>
+                    <div class="text">在线客服</div>
                 </a>
             </li>
             <li class="footer_navbar_li">
                 <img src="./image/hezuohuoban.png"/>
                 <div class="right" style="position: relative;">
-                    <span class="text">合作伙伴</span>
+                    <div class="text">合作伙伴</div>
                     <select>
                         <option value="">剑桥大学幸福研究院</option>
                         <option value="">联动天翼科技有限公司</option>
@@ -123,5 +218,10 @@
 </div>
 
 <script type="text/javascript" src="./js/my_share.js"></script>
+
+<script>
+    alert(WeixinApi);
+
+</script>
 </body>
 </html>
