--- a/mobile/index.html
+++ b/mobile/index.html
@@ -50,7 +50,7 @@
                 </a>
             </li>
             <li>
-                <a href="#">
+                <a href="./zhuanjia.html">
                     <img src="./image/team.png">
                     <span>专家库</span>
                 </a>
@@ -70,9 +70,9 @@
         <a href="./airobot.html">
             <img class="info_img" src="./image/third.png"/>
         </a>
-        <a href="./zhuanjia.html">
-            <img class="info_img" src="./image/four.png"/>
-        </a>
+        <!--<a href="./zhuanjia.html">-->
+            <!--<img class="info_img" src="./image/four.png"/>-->
+        <!--</a>-->
         <a href="./ourteam.html">
             <img class="info_img" src="./image/five.png"/>
         </a>
