--- a/mobile/ourteam.html
+++ b/mobile/ourteam.html
@@ -13,7 +13,7 @@
     <script type="text/javascript" src="./js/jquery-1.10.2.min.js"></script>
     <script type="text/javascript" src="./js/jquery.glide.min.js"></script>
 </head>
-<body>
+<body onselectstart="return false" oncontextmenu="window.event.returnValue=false" onpaste="return false;" oncopy="return false;" oncut="return false;">
 <!-- 导航 -->
 <div class="my_nav">
     <a class="weixin" href="javascript:history.go(-1);">
