--- a/mobile/ourteam.html
+++ b/mobile/ourteam.html
@@ -33,7 +33,49 @@
 </div>
 
     <div class="my_page">
-        <img src="image/office.png">
+        <div>
+            <div class="team slider">
+                <div class="content-wrapper slides">
+                    <div class="content_article content_article--fast slide">
+                        <img src="./image/five.png">
+                    </div>
+                    <div class="content_article content_article--fast slide">
+                        <img class="photo" src="./image/tim.png">
+                    </div>
+                    <div class="content_article content_article--fast slide">
+                        <img class="photo" src="./image/maomao.png">
+                    </div>
+                    <div class="content_article content_article--fast slide">
+                        <img class="photo" src="./image/yijiao.png">
+                    </div>
+                    <div class="content_article content_article--fast slide">
+                        <img class="photo" src="./image/alice.png">
+                    </div>
+                    <div class="content_article content_article--fast slide">
+                        <img class="photo" src="./image/ju.png">
+                    </div>
+                    <div class="content_article content_article--fast slide">
+                        <img class="photo" src="./image/kiu.png">
+                    </div>
+                    <div class="content_article content_article--fast slide">
+                        <img class="photo" src="./image/siron.png">
+                    </div>
+                    <div class="content_article content_article--fast slide">
+                        <img class="photo" src="./image/dong.png">
+                    </div>
+                    <div class="content_article content_article--fast slide">
+                        <img class="photo" src="./image/ting.png">
+                    </div>
+                    <div class="content_article content_article--fast slide">
+                        <img class="photo" src="./image/yajing.png">
+                    </div>
+                    <div class="content_article content_article--fast slide">
+                        <img class="photo" src="./image/tian.png">
+                    </div>
+
+                </div>
+            </div>
+        </div>
 
         <!-- 介绍 -->
         <div class="us_info">
@@ -45,29 +87,37 @@
         </div>
 
 
-        <div>
-            <div class="team slider">
-                <div class="content-wrapper slides">
-                    <div class="content_article content_article--fast slide">
-                        <img style="position: relative; float: left; width: 50%;" class="photo"
-                             src="./image/tim.png">
-                        <img style="position: relative; float: left; width: 50%;" class="info"
-                             src="./image/tim-info.png">
-                    </div>
-                    <div class="content_article content_article--fast slide">
-                        <img style="position: relative; float: left; width: 50%;" class="photo"
-                             src="./image/maomao.png">
-                        <img style="position: relative; float: left; width: 50%;" class="info"
-                             src="./image/maomao-info.png">
-                    </div>
-                    <div class="content_article content_article--fast slide">
-                        <img style="position: relative; float: left; width: 50%;" class="photo"
-                             src="./image/yijiao.png">
-                        <img style="position: relative; float: left; width: 50%;" class="info"
-                             src="./image/yijiao-info.png">
-                    </div>
-                </div>
-            </div>
+        <img class="info_img" src="./image/hexintuandui1.png">
+        <div class="chanpinfuwu_info">
+            <h3>崇高的价值理念</h3>
+            <span>我们摒弃空谈，抛开光环，走出象牙塔</span><br>
+            <span>追求务实、行动、速度、创新、共赢</span><br>
+            <span>我们坚守崇高的价值观</span><br>
+            <span>只为了</span><br>
+            <span>提供最极致的用户体验</span><br>
+
+        </div>
+
+        <img class="info_img" src="./image/hexintuandui2.png">
+        <div class="chanpinfuwu_info">
+            <p>顶尖的国际紫原及合作平台</p>
+            <span>连结、开放、分享全球专业与紫原</span><br>
+            <span>具有共赢心态与世界合作伙伴共享行业成长</span><br>
+            <span>汇聚各地一流的精英</span><br>
+            <span>只为了</span><br>
+            <span>团结让世界更美好的力量</span><br>
+
+        </div>
+        <img src="./image/hexintuandui3.png"/>
+
+        <div class="chanpinfuwu_info">
+            <p>庞大的市场和社会价值</p>
+            <span>处于一个传说中千亿美元的心里健康产业</span><br>
+            <span>干着推动人类健康发展刚需的事业</span><br>
+            <span>接合专业知识、互联网、高科技及无线创意</span><br>
+            <span>只为了</span><br>
+            <span>使这个世界更健康、更幸福</span><br>
+
         </div>
 
 
