--- a/mobile/zhuanjia.html
+++ b/mobile/zhuanjia.html
@@ -129,9 +129,10 @@
     </div>
 
 
+
     <!-- 分享 -->
     <div class="share">
-        <div>分享给好友</div>
+        <span>分享给好友</span>
         <ul class="share-list">
             <li>
                 <a class="share-icon"
@@ -169,25 +170,25 @@
             <li class="footer_navbar_li">
                 <a  class="right" href="#">
                     <img src="./image/meitijieshao.png"/>
-                    <div class="text">媒体介绍</div>
+                    <span class="text">媒体介绍</span>
                 </a>
             </li>
             <li class="footer_navbar_li">
                 <img src="./image/lianluowomen.png"/>
                 <a class="left" href="#">
-                    <div class="text">联络我们</div>
+                    <span class="text">联络我们</span>
                 </a>
             </li>
             <li class="footer_navbar_li">
                 <a  class="right" href="mailto:service@winnovator.com">
                     <img src="./image/zaixiankefu.png"/>
-                    <div class="text">在线客服</div>
+                    <span class="text">在线客服</span>
                 </a>
             </li>
             <li class="footer_navbar_li">
                 <img src="./image/hezuohuoban.png"/>
                 <div class="right" style="position: relative;">
-                    <div class="text">合作伙伴</div>
+                    <span class="text">合作伙伴</span>
                     <select>
                         <option value="">剑桥大学幸福研究院</option>
                         <option value="">联动天翼科技有限公司</option>
