--- a/mobile/index.html
+++ b/mobile/index.html
@@ -44,7 +44,7 @@
                 </a>
             </li>
             <li>
-                <a href="#">
+                <a href="./chanpinfuwu.html">
                     <img src="./image/products.png">
                     <span>产品服务</span>
                 </a>
@@ -56,7 +56,7 @@
                 </a>
             </li>
             <li>
-                <a href="#">
+                <a href="shehuizeren.html">
                     <img src="./image/welcome.png">
                     <span style="">社会责任</span>
                 </a>
@@ -76,7 +76,7 @@
         <a href="./ourteam.html">
             <img class="info_img" src="./image/five.png"/>
         </a>
-        <a href="#">
+        <a href="./welcome.html ">
             <img class="info_img" src="./image/six.png"/>
         </a>
 
