--- a/user/backend/index.html
+++ b/user/backend/index.html
@@ -74,7 +74,7 @@
                         </a>
                         <a class="tile wide bg-color-greenDark" href="#">
                             <div class="image-wrapper">
-                                <img src="assets/img/My Apps.png" alt=""/>
+                                <img src="assets/img/My%20Apps.png" alt=""/>
                             </div>
                             <div class="app-label">聊天师</div>
                         </a>
