--- a/mobile/login.html
+++ b/mobile/login.html
@@ -37,17 +37,18 @@
         </div>
 
         <div  class="cub_content">
+            <div id="info"></div>
             <div class="login">
-                <input class="login_email" placeholder="Email">
-                <input class="login_password" placeholder="Password">
+                <input class="login_email" id="username" placeholder="Email">
+                <input class="login_password" id="password" placeholder="Password">
                 <div class="_55ws">
-                    <button class="submit" type="submit" value="登录" class="_54k8 _56bs _56b_ _56bw _56bu"
-                            name="login" id="u_0_1" data-sigil="touchable">
+                    <button id="login_submit" class="submit" type="submit" value="登录" class="_54k8 _56bs _56b_ _56bw _56bu"
+                           >
                         <span class="_55sr">登录</span>
                     </button>
                 </div>
-
             </div>
+
             <div class="lianjie">
                 <a href="#">忘记密码?</a>
             </div>
@@ -64,5 +65,24 @@
         </div>
     </div>
 </div>
+
+<script type="text/javascript">
+
+    $('#login_submit').click(function(){
+        var username = $("#username").val();
+        var password = $("#password").val();
+        $("#info").removeClass("error   ").addClass("warning").html("正在登录...");
+        $.get("http://winnovator.zz.vc/backend/?username=" + username + "&password=" + password,function(re){
+
+            if(re.indexOf("false") != -1){
+                $("#info").removeClass("warning").addClass("error").html("您的用户名或密码错误，请重新登录！");
+            }else{
+                window.location= "../user/backend/index.html";
+            }
+        });
+
+    });
+
+</script>
 </body>
 </html>
