--- a/mobile/index.html
+++ b/mobile/index.html
@@ -14,9 +14,9 @@
 
     <!-- 导航 -->
     <div class="my_nav">
-        <a class="weixin" href="javascript:history.go(-1);">
-            <img src="./image/goback.png"/>
-        </a>
+        <!--<a class="weixin" href="javascript:history.go(-1);">-->
+            <!--<img src="./image/goback.png"/>-->
+        <!--</a>-->
 
         <h1 class="logo">
             <a href="./index.html">
