--- a/mobile/used.html
+++ b/mobile/used.html
@@ -168,7 +168,7 @@
         </div>
 
         <!-- 分享 -->
-        <div class="share">
+        <div class="share" style=" margin-top: 10px;">
             <span>分享给好友</span>
             <ul class="share-list">
                 <li>
